<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signUp_scrollView_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/common_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signUp_constraintLayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/signUp_dataInsertion_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toTopOf="@+id/signUp_confirm_button_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/signUp_logo_id"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_logo" />

            <EditText
                android:id="@+id/signUp_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signUp_logo_id"
                android:layout_marginTop="8dp"
                android:autofillHints="prova"
                android:ems="10"
                android:hint="@string/signUp_nome_text"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/signUp_lastname_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signUp_name_id"
                android:layout_marginTop="15dp"
                android:autofillHints="prova"
                android:ems="10"
                android:hint="@string/signUp_cognome_text"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/signUp_indirizzo_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signUp_lastname_id"
                android:layout_marginTop="15dp"
                android:autofillHints="prova"
                android:ems="10"
                android:hint="@string/signUp_indirizzo_text"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/signUp_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signUp_indirizzo_id"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/signUp_email_text"
                android:ems="10"
                android:hint="@string/signUp_email_text"
                android:inputType="textEmailAddress"
                android:padding="10dp" />


            <EditText
                android:id="@+id/signUp_password_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@id/signUp_email_id"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/signUp_password_text"
                android:ems="10"
                android:hint="@string/signUp_password_text"
                android:inputType="textPassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/signUp_confpwd_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@id/signUp_password_id"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/signUp_Cpassword_text"
                android:ems="10"
                android:hint="@string/signUp_Cpassword_text"
                android:inputType="textPassword"
                android:padding="10dp" />

            <Switch
                android:id="@+id/signUp_staff_switch_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signUp_confpwd_id"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:text="@string/signUp_text_staff"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/signUp_staff_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signUp_staff_switch_id"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/signUp_staff"
                android:ems="10"
                android:hint="@string/signUp_staff"
                android:inputType="textPersonName"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/signUp_staff_spinner_id"
                android:layout_below="@id/signUp_staff_switch_id"
                android:layout_marginTop="8dp"
                android:entries="@array/tipo"
                android:visibility="gone"
                style="@style/spinner_style"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:elevation="10dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/signUp_yesAccount_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/signUp_yesAccount_description_text"
            android:textColor="@color/colorNavigationMenu"
            app:layout_constraintBottom_toTopOf="@+id/signUp_confirm_button_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="32dp" />

        <TextView
            android:id="@+id/signUp_accedi_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="8dp"
            android:onClick="goToLogin"
            android:text="@string/signUp_accedi_description_text"
            android:textColor="@color/BlueMain"
            app:layout_constraintBottom_toTopOf="@+id/signUp_confirm_button_id"
            app:layout_constraintStart_toEndOf="@+id/signUp_yesAccount_id" />

        <Button
            android:id="@+id/signUp_confirm_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/BlueMain"
            android:onClick="createAccount"
            android:padding="15dp"
            android:text="@string/signUp_registrati_button_description_text"
            android:textColor="@color/WhiteMain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

