<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_background">

    <ImageView
        android:id="@+id/area_logo_id"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <Button
        android:id="@+id/area_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/BlueMain"
        android:onClick="avvioRegistrazione"
        android:padding="15dp"
        android:text="@string/area_button_text"
        android:textColor="@color/WhiteMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/area_ambiente_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/area_ambiente_text"
            android:textColor="@color/BlueMain"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/area_edificio_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/area_spinner_edificio_id"
            android:layout_marginBottom="4dp"
            android:text="@string/area_edificio_text"
            android:textColor="@color/BlackMain" />

        <TextView
            android:id="@+id/area_stanza_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/area_spinner_stanza_id"
            android:layout_marginBottom="4dp"
            android:text="@string/area_stanza_text"
            android:textColor="@color/BlackMain" />

        <Spinner
            android:id="@+id/area_spinner_edificio_id"
            android:entries="@array/first"
            style="@style/spinner_style"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/area_ambiente_text_id"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="12dp"
            android:layout_toRightOf="@id/area_stanza_text_id"
            android:elevation="10dp" />

        <Spinner
            android:id="@+id/area_spinner_stanza_id"
            style="@style/spinner_style"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/area_spinner_edificio_id"
            android:layout_marginBottom="16dp"
            android:layout_toRightOf="@id/area_stanza_text_id"
            android:elevation="10dp" />

        <Switch
            android:id="@+id/area_remoto_switch_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/area_spinner_stanza_id"
            android:layout_marginTop="12dp"
            android:text="@string/area_remoto_text"
            android:textSize="18sp"
            android:textColor="@color/BlueMain"/>

        <EditText
            android:id="@+id/area_remoto_api_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/area_remoto_switch_id"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="@string/area_remoto_api_text"
            android:ems="10"
            android:hint="@string/area_remoto_api_text"
            android:inputType="textPersonName"
            android:visibility="gone" />

        <EditText
            android:id="@+id/area_remoto_channel_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/area_remoto_api_id"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints="@string/area_remoto_channel_text"
            android:hint="@string/area_remoto_channel_text"
            android:visibility="gone"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>