<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_background"
    tools:context=".ReportActivity">

    <include
        android:id="@+id/report_toolbar_layout_id"
        layout="@layout/toolbar_layout"></include>


    <ImageView
        android:id="@+id/report_logo_id"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/report_logo_text"
        app:layout_constraintBottom_toTopOf="@+id/report_box_description_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <EditText
        android:id="@+id/report_box_text_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/report_segnalazione_hint"
        android:background="@drawable/gradient_report_text"
        android:elevation="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/report_segnalazione_hint"
        android:inputType="textMultiLine"
        android:lines="16"
        android:maxLines="16"
        app:layout_constraintEnd_toEndOf="@+id/report_box_description_id"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/report_box_description_id"
        app:layout_constraintTop_toBottomOf="@+id/report_box_description_id" />

    <TextView
        android:id="@+id/report_box_description_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="256dp"
        android:text="@string/report_segnalazione_string"
        android:textColor="@color/BlueMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/report_button_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="60dp"
        android:background="@color/send_button"
        android:onClick="inviaFeedback"
        android:text="@string/report_button_text"
        android:textColor="@color/WhiteMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/report_box_text_id"
        app:layout_constraintStart_toStartOf="@+id/report_box_text_id"
        app:layout_constraintTop_toBottomOf="@+id/report_box_text_id" />
</androidx.constraintlayout.widget.ConstraintLayout>